--- a/Contents/mods/zomboidPaperAPI/common/ChangeLog.txt
+++ b/Contents/mods/zomboidPaperAPI/common/ChangeLog.txt
@@ -6,3 +6,7 @@
 - Moves drawing paper to ZomboidPaperAPI + fixes UI/model conflict.
 - Fixes issue with trying to translate "<" and ">".
 [ ------ ]
+
+[ 2/16/25 ]
+- B42 Initial Update
+[ ------ ]
